--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,1 +1,61 @@
-<p>about-us works!</p>
+<div class="card text-white ">
+    <img src="assets/about.jpg" class="card-img" alt="About Us" height="150" width="auto">
+    <div class="card-img-overlay">
+        <h5 class="card-title">About Us</h5>
+        <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
+            This content is a little bit longer.</p> -->
+        <p class="card-text">Thank you for visiting this section, here you will know all about me.</p>
+    </div>
+</div>
+<div class="row m-5 mt-4">
+    <div class="col" >
+        <h2 class="text-center">Our Mission</h2>
+        <p>To be the undisputed market leader by providing accessible, affordable, timely and quality healthcare
+            diagnostics, applying insights and cutting edge technology to create value for all stakeholders.</p>
+    </div>
+    <div class="col ms-3">
+        <h2 class="text-center">Our Vision</h2>
+        <p>Be the most trusted healthcare partner, enabling healthier lives.</p>
+    </div>
+</div>
+
+
+
+<h1 class="mt-5 ps-5"><u>Our Team</u></h1>
+<div class="card-group m-5">
+    <div class="card ">
+        <img src="assets/About-us.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card ms-3">
+        <img src="assets/About-us.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card ms-3">
+        <img src="assets/About-us.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card ms-3">
+        <img src="assets/About-us.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+</div>
