--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,1 +1,84 @@
-<p>contact-us works!</p>
+<div class=" bg-dark" style="border: 1px solid rgb(7, 7, 7);">
+
+    <div class="col address m-5">
+
+        <h1 class="text-center">Get in touch</h1>
+        <p class="text-center">Lore optio sit minima. Harum quaerat veniam optio soluta cumque a eos aspernatur.
+            Delectus, quasi?
+        </p>
+        <div class="row m-5">
+
+            <div class="col">
+
+                <h4><i class="fa-solid fa-location-dot"></i></h4>
+                <p class="text-center">
+                    <span>Address :</span>
+                    Saray Madan Baheriya <br>Sikandra Prayagraj <br><span class="text-danger">212109</span>
+                </p>
+            </div>
+
+            <div class="col">
+
+                <h4> <i class="fa-solid fa-envelope"></i></h4>
+                <p class="text-center">
+                    <span>E-Mail :</span>
+                    <a href="mailto:dev@gmail.com">dev&#64;gmail.com</a>
+                </p>
+
+            </div>
+            <div class="col">
+
+                <!-- <h5> -->
+                <i class="fa-solid fa-phone"></i>
+                <!-- </h5> -->
+                <p class="text-center">
+                    <span> Mobile No.</span>
+                    <a href="tel:8543017883">8543017883</a>
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col row m-4">
+
+        <h1 class="text-center text-info ">Have some query mail us</h1>
+        <p class="text-center text-warning">Visit our office or drop a word if you have any queries.</p>
+
+        <!-- <div class="col">
+            <img src="assets/Contact-img.svg" alt="" height="400" width="500">
+        </div> -->
+
+        <div class="col form mt-5">
+
+            <div class="form-floating mb-3">
+                <input type="name" class="form-control" id="floatingInput" placeholder="Enter Your Name">
+                <label for="floatingInput">Enter Your Name</label>
+            </div>
+
+            <div class="row">
+                <div class="col mb-3">
+                    <input type="email" class="form-control " id="floatingInput" placeholder="Enter Your Email">
+                    <!-- <label for="floatingInput">Email address</label> -->
+                </div>
+                <div class="col">
+                    <input type="number" class="form-control" id="floatingNumber" placeholder="Mobile Number">
+                    <!-- <label for="floatingNumber">Mobile Number</label> -->
+                </div>
+            </div>
+
+            <div class="form-floating mt-3">
+                <textarea class="form-control " placeholder="Leave a comment here" id="floatingTextarea2"
+                    style="height: 100px"></textarea>
+                <label for="floatingTextarea2">Comments</label>
+            </div>
+
+            <div class="text-center ">
+                <button type="button" class="btn btn-outline-success mt-3 w-50">Submit</button>
+                <!-- <button type="button" class="btn btn-outline-danger m-3">Reset</button> -->
+            </div>
+
+        </div>
+    </div>
+</div>
