--- a/src/app/about-us/about-us.component.css
+++ b/src/app/about-us/about-us.component.css
@@ -29,3 +29,7 @@ u {
     text-decoration-style: solid;
     /* transition: all .5s ease-in; */
 }
+
+.doctorName,.md-desc{
+    font-family: poppins;
+}
