--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -47,7 +47,7 @@
         <p class="text-center text-warning">Visit our office or drop a word if you have any queries.</p>
 
         <!-- <div class="col">
-            <img src="assets/Contact-img.svg" alt="" height="400" width="500">
+            <img class="img-fluid" src="assets/Contact-img.svg" alt="" height="400" width="500">
         </div> -->
 
         <div class="col form mt-5">
