--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,5 +1,5 @@
 <div class="card text-white ">
-    <img src="assets/about.jpg" class="card-img" alt="About Us" height="150" width="auto">
+    <img class="img-fluid" src="assets/about.jpg" class="card-img" alt="About Us" height="150" width="auto">
     <div class="card-img-overlay">
         <h5 class="card-title">About Us</h5>
         <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
@@ -7,8 +7,80 @@
         <p class="card-text">Thank you for visiting this section, here you will know all about me.</p>
     </div>
 </div>
+<div class="col mt-3 p-5">
+    <p class="about-text">
+        Book a blood test or expert health check-up packages online with Metropolis Healthcare - one of the leading
+        diagnostic service provider in India. Get quality reports trusted by leading doctors and hospitals from our NABL
+        and CAP certified labs of Metropolis.
+
+        One can either visit our nearest Metropolis lab to give your blood sample or opt for blood collection at home
+        service, so that you can get all the benefits of diagnostic centre and pathology labs in the comfort of your
+        home.
+
+        With a certified team of 200 senior pathologists and over 2000 technicians we, provide diagnostic services
+        ranging from routine to semi speciality tests like oncology, neurology, gynaecology, nephrology to complete
+        health check-up packages for Men, Women, Senior Citizens, Youth & Corporates.
+    </p>
+</div>
+
+<div class="row d-flex align-items-top pb-5">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-3">
+        <img src="assets/About-us.jpg" class="img-fluid doctorImage" alt="profile image">
+        <p class="doctorName"> <strong>Dr. Surendra Kumar Patel</strong></p>
+        <p class="doctorDesignation">Managing Director</p>
+        <p class="md-desc"><i><b>As one of the country’s leading diagnostic companies, MHL
+            continues building and nurturing its talent. Several employee training and
+            development initiatives are often undertaken. This helps incorporate
+            integrity as a core ingredient of the Company’s work culture.</b></i></p>
+    </div>
+    <div class="col-sm-7 offset-sm-1">
+        <h2>MD’s Message</h2>
+        <p class="text-justify">To begin with, I would like to bring your attention to
+            an Indicator that I have been passionate and relentless about. I am happy to
+            share with you that in FY19, our Net Promoter Score has been on average at
+            85, which means that 85% of our customers are willing to recommend
+            Metropolis to their family and network. Our Chairman in his note has
+            emphasized on Metropolis’ core vision of putting the patients first and our
+            customer loyalty score is an outcome of this vision.</p>
+        <p class="text-justify">Moving on to our performance review, we continue to
+            maintain our position in the leaders’ quadrant and are ranked amongst the
+            Top 2 companies in the fast growing Indian diagnostic industry. </p>
+        <p class="text-justify"><strong>Going closer to the patient</strong><br>
+            FY19 has ended on a positive note for us as the company delivered faster
+            than industry growth. We are positive on the short and medium term growth
+            for Metropolis owing to fast paced network expansion, relentless execution,
+            strong brand and customer first philosophy. We are happy to report a 15.5%
+            growth in number of patient visits with increase in revenue per patient
+            (2.1%) and revenue per test (11.2%), which are better than current industry
+            standards.
+        </p>
+        <p class="text-justify"><strong>Bolstering our growth in the wellness
+                space</strong><br>
+            Our wellness initiative ‘TruHealth’ was launched across 36 cities and we are
+            confident that this will help us bolster our position in the fast growing
+            wellness segment. It is heartening to see a positive trend of customers
+            choosing to safeguard their health by undergoing preventive screening and
+            diagnose conditions before they turn in to complications.</p>
+        <p class="text-justify"><strong>The Metropolis Family</strong><br>
+            Our people are at the core of everything we do. Our highly experienced
+            leadership team leads day to day business and operations. Metropolis’ strong
+            scientific and technical team of over 2000 members is led by a team of 200
+            doctors and pathologists. Our phlebotomists and home service technicians are
+            best in class, highly skilled and trained to collect samples in a single
+            prick and are efficient in drawing samples from infants, small children and
+            the elderly. We will make continuous efforts to progress on diversity and
+            inclusion as we move forward.
+        </p>
+        <p class="regrads-p">
+            Yours truly,<br><b>Ameera Shah</b><br>Managing Director
+        </p>
+    </div>
+</div>
+
 <div class="row m-5 mt-4">
-    <div class="col" >
+
+    <div class="col">
         <h2 class="text-center">Our Mission</h2>
         <p>To be the undisputed market leader by providing accessible, affordable, timely and quality healthcare
             diagnostics, applying insights and cutting edge technology to create value for all stakeholders.</p>
