--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,19 +8,23 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active"  routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" aria-current="page" routerLink="/home">Home</a>
+          <a class="nav-link active" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+            aria-current="page" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"  aria-current="page" routerLink="/about">About Us</a>
+          <a class="nav-link active" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+            aria-current="page" routerLink="/about">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active"  routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"  aria-current="page" routerLink="/service">Services</a>
+          <a class="nav-link active" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+            aria-current="page" routerLink="/service">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active"  routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"  routerLink="/contact">Contact</a>
+          <a class="nav-link active" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+            routerLink="/contact">Contact</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link active dropdown-toggle"  routerLinkActive="active" id="navbarDropdown" role="button"
+          <a class="nav-link active dropdown-toggle" routerLinkActive="active" id="navbarDropdown" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
             Gallery
           </a>
