--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
+
+body {
+    background: #bbdefb !important;
+
+    /* background: #e3f2fd !important; */
+}
+
+/* html,
+body {
+    height: 100%;
+} */
+
+body {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+body::-webkit-scrollbar {
+    width: 13px;
+
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: linear-gradient(rgb(2, 247, 247), rgb(21, 212, 148), rgb(191, 97, 222));
+    border-radius: 15px;
+
+}
