MD images added

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -23,16 +23,16 @@
     </p>
 </div>
 
-<div class="row d-flex align-items-top pb-5">
+<div class="row d-flex align-items-top p-3">
     <div class="col-sm-1"></div>
     <div class="col-sm-3">
-        <img src="assets/About-us.jpg" class="img-fluid doctorImage" alt="profile image">
-        <p class="doctorName"> <strong>Dr. Surendra Kumar Patel</strong></p>
-        <p class="doctorDesignation">Managing Director</p>
+        <img src="assets/Dr. SRKP.jpg" class="img-fluid doctorImage" alt="profile image">
+        <p class="doctorName mb-1"> <strong>Dr. Surendra Kumar Patel</strong></p>
+        <p class="doctorDesignation ">(Managing Director)</p>
         <p class="md-desc"><i><b>As one of the country’s leading diagnostic companies, MHL
-            continues building and nurturing its talent. Several employee training and
-            development initiatives are often undertaken. This helps incorporate
-            integrity as a core ingredient of the Company’s work culture.</b></i></p>
+                    continues building and nurturing its talent. Several employee training and
+                    development initiatives are often undertaken. This helps incorporate
+                    integrity as a core ingredient of the Company’s work culture.</b></i></p>
     </div>
     <div class="col-sm-7 offset-sm-1">
         <h2>MD’s Message</h2>
