--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,7 +1,10 @@
 
-<p class="h1 m-5"><u>Services</u></p> 
+<p class="h1 m-3 ms-5"><u>Services</u></p> 
+<p class="m-1 p-3">Metropolis is a global leader in Blood Tests, Diagnostics and Wellness services. With operations across India, Africa, South Asia, and Middle East, we are trusted millions of Customers for their Inner Health Management
 
-<div class="container mt-5 p-5">
+</p>
+
+<div class="container mt-3 p-5">
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
             <div class="card h-100">
