--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -1,1 +1,35 @@
-<p>images works!</p>
+
+<div class="container">
+
+<div class=" card-group mt-4 p-3">
+    <div class="card ms-3" style="width: 18rem;">
+        <img src="assets/Dr. Holding Blood Sample.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <p class="card-text">
+                After collecting the blood sample of patient & we collect the blood very carefully and neatly.
+            </p>
+        </div>
+    </div>
+    <div class="card ms-3" style="width: 18rem;">
+        <img src="assets/Dr. with Pateint.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+        </div>
+    </div>
+    <div class="card ms-3" style="width: 18rem;">
+        <img src="assets/Carousel-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+        </div>
+    </div>
+    <div class="card ms-3" style="width: 18rem;">
+        <img src="assets/Carousel-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+        </div>
+    </div>
+</div>
+</div>
