--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,6 +47,7 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      <button class="btn btn-danger ms-3" routerLink="login">Login</button>
     </div>
   </div>
 </nav>
