--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -10,7 +10,8 @@
 
             <div class="col">
 
-                <h4><i class="fa-solid fa-location-dot"></i></h4>
+                <h4><a href="https://maps.app.goo.gl/CeyqYnuK5q21NpdV6"><i class="fa-solid fa-location-dot"></i></a>
+                </h4>
                 <p class="text-center">
                     <span>Address :</span>
                     Saray Madan Baheriya <br>Sikandra Prayagraj <br><span class="text-danger">212109</span>
@@ -41,16 +42,22 @@
     </div>
 
 
-    <div class="col row m-4">
+    <div class=" row m-4">
 
         <h1 class="text-center text-info ">Have some query mail us</h1>
         <p class="text-center text-warning">Visit our office or drop a word if you have any queries.</p>
 
         <!-- <div class="col">
             <img class="img-fluid" src="assets/Contact-img.svg" alt="" height="400" width="500">
-        </div> -->
+        </div> -->/
+        <div class="col-4">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.2366797400705!2d81.99712601000708!3d25.630269177340566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399ab1d02c3dfec1%3A0x4f7feeca618b7e9f!2sTaza%20Akhbar!5e0!3m2!1sen!2sin!4v1706091841500!5m2!1sen!2sin"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
 
-        <div class="col form mt-5">
+        <div class="col-6 form mt-5">
 
             <div class="form-floating mb-3">
                 <input type="name" class="form-control" id="floatingInput" placeholder="Enter Your Name">
