--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -1,5 +1,6 @@
 <div class="container">
 
+
     <div class=" card-group mt-4 p-3">
         <div class="card ms-3" style="width: 18rem;">
             <img src="assets/Images/Dr. Holding Blood Sample-1.jpg" class="card-img-top" alt="...">
@@ -137,3 +138,13 @@
         </div>
     </div>
 </div>
+
+
+<!-- <div class="card ms-3" style="width: 18rem;">
+    <img src="assets/Images/Dr. Holding Blood Sample-1.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+        <p class="card-text">
+            After collecting the blood sample of patient & we collect the blood very carefully and neatly.
+        </p>
+    </div>
+</div> -->
