--- a/src/app/Our-Services/services.component.html
+++ b/src/app/Our-Services/services.component.html
@@ -8,7 +8,7 @@
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Carousel-3.jpg" class="card-img-top" alt="...">
+                <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Medical Store</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -19,7 +19,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Carousel-3.jpg" class="card-img-top" alt="...">
+                <img src="assets/Services/blood-collection.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Home Blood Collection</h5>
                     <p class="card-text">This is a short card.</p>
@@ -28,7 +28,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Carousel-3.jpg" class="card-img-top" alt="...">
+                <img src="assets/Services/Report.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Online Reporting</h5>
                     <p class="card-text">We Provide Online Reporting System, You Can Download Your Report by Your Phone
@@ -38,7 +38,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Carousel-3.jpg" class="card-img-top" alt="...">
+                <img src="assets/Services/Doctor-suggestion.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Doctor's Suggestion</h5>
                     <p class="card-text">
@@ -49,7 +49,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Carousel-3.jpg" class="card-img-top" alt="...">
+                <img src="assets/Services/X-Ray.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">X-Ray Center</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -60,7 +60,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Carousel-3.jpg" class="card-img-top" alt="...">
+                <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">OPD Facility Available</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -71,7 +71,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Carousel-3.jpg" class="card-img-top" alt="...">
+                <img src="assets/Services/wellness.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Wellness Solutions</h5>
                     <p class="card-text"> We offer pre-employment check-ups, employee health plans, and annual check-ups
@@ -82,7 +82,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="assets/Carousel-3.jpg" class="card-img-top" alt="...">
+                <img src="assets/Services/nutrition-diet.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Nutrition & Dietition</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
