--- a/src/app/packages/packages.component.html
+++ b/src/app/packages/packages.component.html
@@ -1,1 +1,180 @@
-<p>packages works!</p>
+<div class="card text-white">
+    <img src="assets/Package-img.jpg" class="card-img" alt="..." height="300" style="width: 100%;">
+    <div class="card-img-overlay text-center" style="background-color: rgba(50, 50, 50, 0.6);">
+        <h1 class="h1 text-center">Our Packages</h1>
+        <blockquote class="blockquote text-center">
+            <p> Your Path to Comprehensive Health and Wellness.</p>
+        </blockquote>
+    </div>
+</div>
+
+<div class="package-text mt-4">
+    <figure class="text-end">
+        <blockquote class="blockquote mx-5">
+            <p>Find the most suitable full body checkup for you from our range of TruHealth Checkups.</p>
+        </blockquote>
+        <figcaption class="blockquote-footer mx-5">
+            Someone famous in <cite title="Source Title">Source Title</cite>
+        </figcaption>
+    </figure>
+</div>
+
+
+
+
+
+
+
+<div class="container mt-5">
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card mb-5" style="max-width: 100%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
+            </div>
+            <div class="col-md-8 ">
+                <div class="card-body p-5">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
