--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -43,10 +43,10 @@
         </li>
 
       </ul>
-      <form class="d-flex">
+      <!-- <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form> -->
       <button class="btn btn-danger ms-3" routerLink="login">Login</button>
     </div>
   </div>
